# smart-oh-ws-server

./: .gitignore  .pre-commit-config.yaml  README.md  db.py  main.py  pyproject.toml  requirements.txt  state.py  test.py  websocket_manager.py
.github/workflows/: deploy_ec2.yml
src/: main.py
src/db/: db.py
src/websocket/: state.py  websocket_manager.py
